# entangler

./: .gitignore  .gitmodules  Cargo.toml  LICENSE.txt  README.md  flake.nix  justfile  rust-toolchain.toml  west.yml
.west/: config
app/: CMakeLists.txt  prj.conf  west.yml
app/boards/: quanta_entangler_rp2040.overlay  rpi_pico.overlay
app/boards/adafruit/feather_rp2040_lora/: Kconfig.adafruit_feather_rp2040_lora  adafruit_feather_rp2040_lora-common.dtsi  adafruit_feather_rp2040_lora-pinctrl.dtsi  adafruit_feather_rp2040_lora.dts  adafruit_feather_rp2040_lora_defconfig  board.yml
app/boards/quanta/entangler_rp2040/: Kconfig  Kconfig.board  Kconfig.defconfig  board.yml  quanta_entangler_rp2040-common.dtsi  quanta_entangler_rp2040-pinctrl.dtsi  quanta_entangler_rp2040.dts
app/src/: main.c  settings.h
app/src/drivers/: lora.c
app/src/managers/: gnss.c  indicator_manager.c  indicator_manager.h  settings.c  settings.h
app/src/managers/settings/: device.c  device.h  lora.c  lora.h
app/src/shell/: lora.h  shell.h
app/zephyr/: module.yml
boards/adafruit/feather_rp2040_lora/: Kconfig  Kconfig.defconfig  adafruit_feather_rp2040_lora.dts
boards/quanta/entangler_rp2040/: Kconfig  Kconfig.quanta_entangler_rp2040  board.cmake  quanta_entangler_rp2040.dts
entangler/: Cargo.toml  memory.x
entangler-ino/: .gitignore  platformio.ini
entangler-ino/data/: config.json
entangler-ino/lib/Config/: Config.h
entangler-ino/lib/Debug/: Debug.hpp
entangler-ino/lib/Event/: Event.h
entangler-ino/src/: main.cpp
entangler-rs/: Cargo.toml  README.md
entangler-rs/entangler/: Cargo.toml
entangler/src/: main.rs  resources.rs  state.rs
entangler/src/event/: indicator.rs  interface.rs  mod.rs
entangler/src/system/: event.rs  indicator.rs  lora.rs  mod.rs  resources.rs  state.rs
entangler/src/system/interface/: acm.rs  mod.rs
entangler/src/task/: indicator.rs
modules/quanta-modbus/: CMakeLists.txt  Kconfig  quanta_modbus.c
modules/quanta-modbus/zephyr/: module.yml
zephyr/: .gitignore  README.md  flake.nix  justfile  shell.nix
zephyr/app/: CMakeLists.txt  prj.conf  west.yml
zephyr/app/boards/: rpi_pico.overlay
zephyr/app/src/: main.c  tasks.h
zephyr/app/src/tasks/: lora.c  lora.h  neopixel.c  neopixel.h
