[workspace]
edition = "2021"
resolver = "2"
members = ["entangler"]

[workspace.dependencies]
embassy-embedded-hal = { version = ">=0.2.0", git = "https://github.com/embassy-rs/embassy.git", features = [
  "defmt",
] }
embassy-executor = { version = ">=0.6.0", git = "https://github.com/embassy-rs/embassy.git", features = [
  "arch-cortex-m",
  "executor-thread",
  "executor-interrupt",
  "defmt",
  "integrated-timers",
] }
embassy-rp = { version = ">=0.2.0", git = "https://github.com/embassy-rs/embassy.git", features = [
  "defmt",
  "unstable-pac",
  "time-driver",
  "critical-section-impl",
  "rp2040",
] }
defmt = "0.3"
defmt-rtt = "0.4"
fixed = "1.23.1"
fixed-macro = "1.2"
cortex-m = { version = "0.7.7", features = ["inline-asm"] }
cortex-m-rt = "0.7.3"
panic-probe = { version = "0.3", features = ["print-defmt"] }
futures = { version = "0.3.17", default-features = false, features = [
  "async-await",
  "cfg-target-has-atomic",
  "unstable",
] }
heapless = "0.8"
embedded-hal = { version = "^1.0.0" }
embedded-hal-async = "^1.0.0"
embedded-hal-bus = { version = "0.2.0", features = ["async"] }
embedded-io-async = { version = "0.6.1", features = ["defmt-03"] }
static_cell = "2"
portable-atomic = { version = "1.5", features = ["critical-section"] }
log = { version = "0.4", features = ["release_max_level_info"] }
pio-proc = "0.2"
pio = "0.2.1"
rand = { version = "0.8.5", default-features = false }
nalgebra = { version = "0.33.0", default-features = false }
num-traits = { version = "0.2.19", default-features = false }
embassy-usb-logger = { version = ">=0.2.0", git = "https://github.com/embassy-rs/embassy.git" }
embassy-usb = { version = ">=0.3.0", git = "https://github.com/embassy-rs/embassy.git", features = [
  "defmt",
] }

embassy-sync = { version = ">=0.6.0", git = "https://github.com/embassy-rs/embassy.git", features = [
  "defmt",
] }
embassy-time = { version = ">=0.3.0", git = "https://github.com/embassy-rs/embassy.git", features = [
  "defmt",
  "defmt-timestamp-uptime",
] }
embassy-futures = { version = ">=0.1.0", git = "https://github.com/embassy-rs/embassy.git" }
usbd-hid = ">=0.8.1"


#embedded-storage = { version = "0.3" }
